# file-explorer

./: .gitignore  components.json  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  random_string.rs  search.rs
src-tauri/src/features/: filesystem.rs  mod.rs
src-tauri/src/features/functions/: mod.rs
src-tauri/src/filesystem/: cache.rs  explorer.rs  volume.rs
src-tauri/src/utils/: mod.rs  splashscreen.rs  theme.rs
src/@types/: globals.d.ts
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/[...paths]/: page.tsx
src/components/layout/: files-breadcumb.tsx  loader.tsx  search.tsx  window-controls.tsx
src/components/ui/: breadcrumb.tsx  breadcumb.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  radio-group.tsx  select-field.tsx  select.tsx  textarea.tsx
src/contexts/: contexts.tsx  files.context.tsx  theme.context.tsx
src/data/: file-extentions-options.data.ts
src/features/choose-volumes/: choose-volumes.hook.ts  index.tsx
src/features/directory-contents/: directory-contents.hook.ts  directory-contents.hook.tsx  index.tsx
src/hooks/: use-explore.hook.ts
src/providers/: index.tsx  tanstack.provider.tsx
src/shared/state/: app.state.ts
src/utils/: app.utils.ts  file-explorer.utils.ts  string.utils.ts  zod.utils.ts
